# GeNuSys

./: .gitignore  CMakeLists.txt  FindGeNuSys.cmake  README.md  astyle.sh  doxyfile
GeNuSys/: CMakeLists.txt  bit_vector.h  digit_set.h  digit_set.hpp  element_traits.h  element_traits.hpp  element_traits_complex.hpp  element_traits_double.hpp  element_traits_int.hpp  element_traits_long_int.hpp  element_traits_long_long.hpp  element_traits_mpf.hpp  element_traits_mpq.hpp  element_traits_mpz.hpp  frobenius_norm.h  frobenius_norm.hpp  hash_table.h  hash_table.hpp  lehmer_schur.h  lehmer_schur.hpp  linalg_algorithms.h  linalg_algorithms.hpp  linalg_operations.h  linalg_operations.hpp  linalg_traits.h  linalg_traits.hpp  main.cpp  matrix.h  matrix.hpp  number_system.h  number_system.hpp  numsys_traits.h  numsys_traits.hpp  operator_norm.h  operator_norm.hpp  p_norm.h  p_norm.hpp  polynomial.h  polynomial.hpp  radix_properties.h  (+20 more)
doxygen/html/: annotated.html  bit__vector_8h_source.html  classGeNuSys_1_1Algebra_1_1Polynomial-members.html  classGeNuSys_1_1Algebra_1_1Polynomial.html  classGeNuSys_1_1LinAlg_1_1Matrix-members.html  classGeNuSys_1_1LinAlg_1_1Matrix.html  classGeNuSys_1_1LinAlg_1_1OperatorNorm-members.html  classGeNuSys_1_1LinAlg_1_1OperatorNorm.html  classGeNuSys_1_1LinAlg_1_1SparseMatrix-members.html  classGeNuSys_1_1LinAlg_1_1SparseMatrix.html  classGeNuSys_1_1LinAlg_1_1SparseVector-members.html  classGeNuSys_1_1LinAlg_1_1SparseVector.html  classGeNuSys_1_1LinAlg_1_1Vector-members.html  classGeNuSys_1_1LinAlg_1_1Vector.html  classGeNuSys_1_1NumSys_1_1BitVector-members.html  classGeNuSys_1_1NumSys_1_1BitVector.html  classGeNuSys_1_1NumSys_1_1HashTable-members.html  classGeNuSys_1_1NumSys_1_1HashTable.html  classGeNuSys_1_1NumSys_1_1NumberSystem-members.html  classGeNuSys_1_1NumSys_1_1NumberSystem.html  classGeNuSys_1_1NumSys_1_1RadixProperties-members.html  classGeNuSys_1_1NumSys_1_1RadixProperties.html  classGeNuSys_1_1NumSys_1_1SmithHash-members.html  classGeNuSys_1_1NumSys_1_1SmithHash.html  classGeNuSys_1_1NumSys_1_1VectorCoder-members.html  classGeNuSys_1_1NumSys_1_1VectorCoder.html  classes.html  digit__set_8h_source.html  (+129 more)
examples/: cyclotomic.cpp  example0.cpp  example1.cpp
tests/: main.cpp  test_runner.cpp  test_runner.h  test_suite.cpp  test_suite.h  test_utils.h  test_utils.hpp  tests.h
(+18 files in other folders)
